sw/source/filter/ww8/docxattributeoutput.hxx
@@ -578,6 +578,8 @@ private:
     DocxColBreakStatus m_nColBreakStatus;
 
     const sw::Frame *m_pParentFrame;
+    // close of hyperlink needed
+    bool m_bCloseHyperlink;
 
 public:
     DocxAttributeOutput( DocxExport &rExport, ::sax_fastparser::FSHelperPtr pSerializer, oox::drawingml::DrawingML* pDrawingML );
